last design and bug fixes
fixed bug double reviewed product
fixed bug of too long prices (after dot)
some design fixes

--- a/src/styles/components/_productTlp.scss
+++ b/src/styles/components/_productTlp.scss
@@ -20,7 +20,8 @@
   padding: 0 24px;
 }
 
-.products-item-price {
+.products-item-price,
+.products-item-text {
   color: $grey-text;
   @include font(18px, 27px);
 }
